fix: Tighten the spacing at the top of an li in styles.css.

--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ a.external:hover {
 
 li,
 .li {
-  margin-top: 0;
+  margin-top: -0.1rem !important;
   margin-bottom: -0.25rem !important;
 }
 
